Refactor output mode selection code

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,3 +1,4 @@
 public net.minecraft.nbt.LongArrayNBT *
 public net.minecraft.tileentity.TileEntity *
 public-f net.minecraft.inventory.container.Slot *
+public net.minecraft.client.gui.FontRenderer *
