--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,5 +1,7 @@
 modLoader="javafml"
 loaderVersion="[31.1,)"
+license="MIT"
+
 [[mods]]
 modId="integratednbt"
 version="${version}"
@@ -11,18 +13,18 @@ Integrated NBT is an addon for Integrated Dynamics. It offers a simpler way of e
 [[dependencies.integratednbt]]
     modId="integrateddynamics"
     mandatory=true
-    versionRange="1.1.1"
+    versionRange="1.1.20"
     ordering="AFTER"
     side="BOTH"
 [[dependencies.integratednbt]]
     modId="forge"
     mandatory=true
-    versionRange="[31.1,)"
+    versionRange="[35.1,)"
     ordering="NONE"
     side="BOTH"
 [[dependencies.integratednbt]]
     modId="minecraft"
     mandatory=true
-    versionRange="[1.15.2]"
+    versionRange="[1.16.4]"
     ordering="NONE"
     side="BOTH"
