--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,4 +1,4 @@
-public net.minecraft.nbt.LongArrayNBT *
-public net.minecraft.tileentity.TileEntity *
-public-f net.minecraft.inventory.container.Slot *
-public net.minecraft.client.gui.FontRenderer *
+public net.minecraft.nbt.LongArrayTag *
+public net.minecraft.world.level.block.entity.BlockEntity *
+public-f net.minecraft.world.inventory.Slot *
+public net.minecraft.client.gui.Font *
