--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ apply plugin: 'maven-publish'
 apply from: 'https://raw.githubusercontent.com/SizableShrimp/Forge-Class-Remapper/main/classremapper.gradle'
 
 
-version = "1.5.0"
+version = "1.5.1"
 group = "me.tepis.integratednbt" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "integratednbt"
 
@@ -31,7 +31,7 @@ minecraft {
     // Simply re-run your setup task after changing the mappings to update your workspace.
 //    mappings channel: 'snapshot', version: '20201028-1.16.3'
 //    mappings channel: 'official', version: '1.16.5'
-    mappings channel: 'official', version: '1.18.1'
+    mappings channel: 'official', version: '1.18.2'
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 
     accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
@@ -115,11 +115,11 @@ dependencies {
     // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
     // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
-    minecraft 'net.minecraftforge:forge:1.18.1-39.0.8'
+    minecraft 'net.minecraftforge:forge:1.18.2-40.1.16'
 
-    implementation fg.deobf('org.cyclops.integrateddynamics:IntegratedDynamics:1.18.1-1.10.10-212:deobf')
-    implementation fg.deobf('org.cyclops.commoncapabilities:CommonCapabilities:1.18.1-2.8.2-50:deobf')
-    implementation fg.deobf('org.cyclops.cyclopscore:CyclopsCore:1.18.1-1.13.0-125:deobf')
+    implementation fg.deobf('org.cyclops.integrateddynamics:IntegratedDynamics:1.18.2-1.11.0:deobf')
+    implementation fg.deobf('org.cyclops.commoncapabilities:CommonCapabilities:1.18.2-2.8.2:deobf')
+    implementation fg.deobf('org.cyclops.cyclopscore:CyclopsCore:1.18.2-1.14.0:deobf')
 
     modLib "com.google.re2j:re2j:1.1"
 
