--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,9 @@
-buildscript {
-    repositories {
-        mavenCentral()
-        maven { url = 'https://maven.minecraftforge.net' }
-    }
-    dependencies {
-        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
-    }
+plugins {
+    id 'eclipse'
+    id 'idea'
+    id 'maven-publish'
+    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
 }
-apply plugin: 'net.minecraftforge.gradle'
-// Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
-apply plugin: 'idea'
-apply plugin: 'maven-publish'
-apply from: 'https://raw.githubusercontent.com/SizableShrimp/Forge-Class-Remapper/main/classremapper.gradle'
 
 
 version = "1.6.0"
@@ -31,7 +23,7 @@ minecraft {
     // Simply re-run your setup task after changing the mappings to update your workspace.
 //    mappings channel: 'snapshot', version: '20201028-1.16.3'
 //    mappings channel: 'official', version: '1.16.5'
-    mappings channel: 'official', version: '1.19.2'
+    mappings channel: 'official', version: '1.20.1'
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 
     accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
@@ -113,22 +105,27 @@ repositories {
     mavenCentral()
 	mavenLocal()
 
-    maven { url = "https://www.cursemaven.com" } // curse mods
+    maven {
+        url "https://cursemaven.com"
+        content {
+            includeGroup "curse.maven"
+        }
+    } // curse mods
 }
 
 dependencies {
     // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
     // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
-    minecraft 'net.minecraftforge:forge:1.19.2-43.1.3'
+    minecraft 'net.minecraftforge:forge:1.20.1-47.1.3'
 
     //Integrated dynamics
-    implementation fg.deobf("curse.maven:cyclops-core-232758:3929867");
-    implementation fg.deobf("curse.maven:common-capabilities-247007:3929863");
-    implementation fg.deobf("curse.maven:integrated-dynamics-236307:3957305");
-    implementation fg.deobf("curse.maven:integrated-tunnels-251389:3957245");
-    implementation fg.deobf("curse.maven:integrated-crafting-287357:3929880");
-    implementation fg.deobf("curse.maven:integrated-terminals-295910:3929892");
+    implementation fg.deobf("curse.maven:cyclops-core-232758:4808715");
+    implementation fg.deobf("curse.maven:common-capabilities-247007:4620480");
+    implementation fg.deobf("curse.maven:integrated-dynamics-236307:4791813");
+    implementation fg.deobf("curse.maven:integrated-tunnels-251389:4782861");
+    implementation fg.deobf("curse.maven:integrated-crafting-287357:4791829");
+    implementation fg.deobf("curse.maven:integrated-terminals-295910:4728167");
 
     modLib "com.google.re2j:re2j:1.1"
 
